testsuite/bsc.interra/preprocessorTestcases/define/Define_WithBlackslashQuote.bsv.bsc-out.expected
checking package dependencies
Error: "Define_WithBlackslashQuote.bsv", line 26, column 19: (P0005)
  Unexpected identifier `are'; expected `.', `(', `[', operator, SV 3.1a
  keyword `matches', `&&&', `?', `,', or `)'
